--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://cheg.github.io/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "CheG's Blog"
+theme = "hugo-theme-minos"
